<resources>
    <string name="app_name">Stark Measurement</string>
    <string name="first_name_placeholder">Nombre</string>
    <string name="select_image_origin">Seleccionar origen de la imagen:</string>
    <string name="take_new_picture">Tomar una nueva fotografía</string>
    <string name="select_image_from_device">Elegir una imagen del dispositivo</string>
    <string name="separator_text">o</string>
    <string name="image_preview_title">Previsualización de la imagen:</string>
    <string name="image_preview_CD">Preview de la imagen</string>
    <string name="separator_CD">Separator</string>
    <string name="cancel_action">Cancelar</string>
    <string name="confirm_action">Confirmar</string>
    <string name="title_activity_image_viewer">ImageViewerActivity</string>
    <string name="photo_file_format">.jpg</string>
    <string name="cannot_draw_angle_message">No es posible dibujar un ángulo si no se han dibujado ejes cartesianos previamente.</string>
    <string name="listener_not_found_error">no se ha encontrado el objeto especificado en la lista.</string>
    <string name="constructor_log_message">Constructor.</string>
    <string name="sendEmail_error_message">No se encontró ninguna aplicación de envío de mails instalada.</string>
    <string name="storeScreenshot_error_message">Error al almacenar la captura de pantalla.</string>
    <string name="default_mail_subject">Información sobre medición</string>
    <string name="default_mail_with_attachment_subject">Información sobre medición - %s</string>
    <string name="share_screenshot_message">Compartir captura de pantalla mediante…</string>
    <string name="share_measurement_details_message">Compartir información de medición mediante…</string>
    <string name="draw_circumference_button_message">Dibujar circunferencia</string>
    <string name="draw_cartesian_axes_button_message">Dibujar ejes cartesianos</string>
    <string name="draw_angle_button_message">Dibujar ángulo</string>
    <string name="save_image_button_message">Guardar captura de pantalla</string>
    <string name="screenshot_saved_message">Captura de pantalla guardada</string>
    <string name="share_action_text">Compartir</string>
    <string name="permissions_denied_message">No se han otorgado los permisos requeridos para continuar.</string>
    <string name="draw_tooth_pitch_button_message">Dibujar paso entre dientes</string>
    <string name="tooth_pitch_input_dialog_positive_button_label">Aceptar</string>
    <string name="tooth_pitch_input_dialog_negative_button_label">Cancelar</string>
    <string name="tooth_pitch_input_dialog_title">Ingresar paso (en mm)</string>
    <string name="cannot_draw_hz_message">No es posible dibujar una h si no se ha dibujado una circunferencia o si no se ha establecido el paso.</string>
    <string name="draw_difference_hz_button_message">Dibujar diferencia entre dientes</string>
    <string name="camera_icon_content_description">Camera</string>
    <string name="last_name_placeholder">Apellido</string>
    <string name="organization_placeholder">Organización/Empresa</string>
    <string name="address_placeholder">Dirección</string>
    <string name="city_placeholder">Ciudad</string>
    <string name="email_placeholder">Email</string>
    <string name="observations_placeholder">Observaciones</string>
    <string name="back_action">Volver</string>
    <string name="angle_measure_notation_format">Ángulo %s: %.2fº\n</string>
    <string name="tooth_measure_notation_format">Diente %s: %.2f mm\n</string>
    <string name="confirm_button_message">Confirmar medición</string>
    <string name="title_activity_measurement_details">Detalles de medición</string>
    <string name="tooth_measure_format">%.2f mm</string>
    <string name="back_to_root_button_label">Volver al inicio</string>
    <string name="title_menu_content_copy">Copiar al portapapeles</string>
    <string name="title_menu_clear_fields">Limpiar campos</string>
    <string name="copy_fields_toast_message">Información copiada al portapapeles</string>
    <string name="copy_fields_toast_error_message">Se produjo un error al copiar el contenido al portapapeles. Por favor, inténtelo nuevamente.</string>
    <string name="not_a_number_error_message">El número ingresado es incorrecto o posee un formato inválido.</string>
</resources>
