<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/photo_capture_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <include layout="@layout/toolbar"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/image_origin_options_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            style="@style/TextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/select_image_origin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/take_new_picture_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/take_new_picture_icon"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/camera_icon_content_description"
                    android:src="@drawable/ic_camera"/>

                <TextView
                    style="@style/TextShadow"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/take_new_picture_icon"
                    android:layout_alignStart="@id/take_new_picture_icon"
                    android:layout_alignEnd="@id/take_new_picture_icon"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/take_new_picture"/>
            </RelativeLayout>

            <include
                android:id="@+id/separator"
                layout="@layout/separator"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/take_new_picture_button"/>

            <RelativeLayout
                android:id="@+id/select_image_from_device_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/separator">

                <ImageView
                    android:id="@+id/select_image_from_device_icon"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/camera_icon_content_description"
                    android:src="@drawable/ic_image"/>

                <TextView
                    style="@style/TextShadow"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/select_image_from_device_icon"
                    android:layout_alignStart="@id/select_image_from_device_icon"
                    android:layout_alignEnd="@id/select_image_from_device_icon"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/select_image_from_device"/>
            </RelativeLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/image_preview_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/image_preview_title"
            style="@style/TextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/image_preview_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <ImageView
            android:id="@+id/image_preview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerInside"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@id/cancel_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_preview_title"
            android:contentDescription="@string/image_preview_CD"
            tools:layout_height="150dp"
            tools:layout_width="150dp"/>

        <Button
            android:id="@+id/cancel_button"
            style="@style/ButtonSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="24dp"
            android:drawableStart="@drawable/ic_close"
            android:onClick="cancelPictureSelection"
            android:text="@string/cancel_action"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/confirm_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/confirm_button"
            style="@style/ButtonPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:drawableStart="@drawable/ic_check"
            android:onClick="confirmPictureSelection"
            android:text="@string/confirm_action"
            app:layout_constraintBottom_toBottomOf="@id/cancel_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/cancel_button"
            app:layout_constraintTop_toTopOf="@id/cancel_button"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>