<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/measurement_details_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="barsotti.alejandro.tf.activities.MeasurementDetailsActivity">

    <include layout="@layout/toolbar"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/root"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/first_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/last_name"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name_placeholder"
                        android:inputType="textPersonName"/>

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/last_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/first_name"
                    app:layout_constraintTop_toTopOf="@+id/first_name">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name_placeholder"
                        android:inputType="textPersonName"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/organization"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="@+id/last_name"
                    app:layout_constraintStart_toStartOf="@+id/first_name"
                    app:layout_constraintTop_toBottomOf="@+id/first_name">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/organization_placeholder"
                        android:inputType="textPersonName"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="@+id/organization"
                    app:layout_constraintStart_toStartOf="@+id/organization"
                    app:layout_constraintTop_toBottomOf="@+id/organization">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address_placeholder"
                        android:inputType="textPostalAddress"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/city"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="@+id/address"
                    app:layout_constraintStart_toStartOf="@+id/address"
                    app:layout_constraintTop_toBottomOf="@+id/address">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/city_placeholder"
                        android:inputType="textPersonName"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="@+id/city"
                    app:layout_constraintStart_toStartOf="@+id/city"
                    app:layout_constraintTop_toBottomOf="@+id/city">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_placeholder"
                        android:inputType="textEmailAddress"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/observations"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="24dp"
                    app:layout_constraintBottom_toTopOf="@+id/back_button"
                    app:layout_constraintEnd_toEndOf="@+id/email"
                    app:layout_constraintStart_toStartOf="@+id/email"
                    app:layout_constraintTop_toBottomOf="@+id/email">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:hint="@string/observations_placeholder"
                        android:inputType="textMultiLine"
                        android:minLines="2"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/back_button"
                    style="@style/ButtonSecondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:drawableStart="@drawable/ic_back"
                    android:onClick="goBack"
                    android:text="@string/back_action"
                    app:layout_constraintBottom_toTopOf="@+id/back_to_root_button"
                    app:layout_constraintEnd_toStartOf="@id/confirm_button"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"/>

                <Button
                    android:id="@+id/confirm_button"
                    style="@style/ButtonPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:drawableStart="@drawable/ic_check"
                    android:onClick="sendEmail"
                    android:text="@string/confirm_action"
                    app:layout_constraintBottom_toBottomOf="@id/back_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@id/back_button"
                    app:layout_constraintTop_toTopOf="@id/back_button"/>

                <TextView
                    android:id="@+id/back_to_root_button"
                    style="@style/AppFont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:onClick="goBackToRoot"
                    android:text="@string/back_to_root_button_label"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/confirm_button"
                    app:layout_constraintStart_toStartOf="@+id/back_button"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
